--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -53,6 +53,13 @@
             </nav>
         </header>
     </div>
+
+    <div class="row">
+        <h1>Hello People</h1>
+
+    </div>
+
+
     <div class="container">
         {% block content %}
         {% endblock %}
